[gd_scene load_steps=3 format=3 uid="uid://dnhfe8ng1lfu1"]

[ext_resource type="Script" path="res://Assets/Scripts/enemy_spawner.gd" id="1_6dx1n"]
[ext_resource type="FontFile" uid="uid://dythax5kmajwu" path="res://Assets/Fonts/Minecraft.ttf" id="2_bs25j"]

[node name="EnemySpawner" type="Node2D"]
script = ExtResource("1_6dx1n")

[node name="OnCleared Button" type="Button" parent="."]
offset_left = 1.0
offset_top = -46.0
offset_right = 82.0
offset_bottom = -23.0
focus_mode = 0
theme_override_fonts/font = ExtResource("2_bs25j")
theme_override_font_sizes/font_size = 14
text = "OnCleared"

[connection signal="pressed" from="OnCleared Button" to="." method="_on_cleared_button_pressed"]
